src/objects/Converted_Note__c.object
<CustomObject>
    <fields>
        <fullName>AS400_Customer_Number__c</fullName>
        <label>AS400 Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Converted Notes</relationshipLabel>
        <relationshipName>Converted_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note_Text__c</fullName>
        <label>Note Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Converted Note</label>
    <nameField>
        <displayFormat>CV-{00000000}</displayFormat>
        <label>Converted Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Converted Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>